--- a/code/packages/app/src/assets/globals.css
+++ b/code/packages/app/src/assets/globals.css
@@ -1,3 +1,10 @@
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
+
+@import '@chatscope/chat-ui-kit-styles/dist/default/styles.min.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
